inbox: Correct margin declaration to avoid odd gap.
(cherry picked from commit c21d2918da08f5c412665d5ab8872fd51f1bc0ad)

--- a/web/styles/inbox.css
+++ b/web/styles/inbox.css
@@ -643,19 +643,10 @@
 }
 
 .inbox-folder-components {
+    margin-bottom: 0.5em;
     border-radius: 5px;
     border: 0.5px solid hsl(0deg 0% 0% / 13%);
     overflow: hidden;
-}
-
-.inbox-folder-components
-    .inbox-folder-channel:last-child
-    .inbox-topic-container,
-#inbox-direct-messages-container {
-    .inbox-row:last-child {
-        /* 8px at 16px / 1em */
-        margin-bottom: 0.5em;
-    }
 }
 
 .inbox-folder.inbox-collapsed-state,
